--- a/CommunityExample/.classpath
+++ b/CommunityExample/.classpath
@@ -20,11 +20,11 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_231"/>
-	<classpathentry kind="lib" path="C:/choimory_IDE/Java/Library/mysql-connector-java-5.1.48.jar">
+	<classpathentry exported="true" kind="lib" path="C:/choimory_IDE/Java/Library/mysql-connector-java-5.1.48.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_231"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
