--- a/CommunityExample/src/main/webapp/WEB-INF/web.xml
+++ b/CommunityExample/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+	
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- DI주입할 context.xml지정 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
@@ -47,5 +49,7 @@
 	    <filter-name>encodingFilter</filter-name> 
 	    <url-pattern>/*</url-pattern> 
  	</filter-mapping> 
+ 	
+ 	<!-- lucy filter -->
  
 </web-app>
