--- a/CommunityExample/src/main/webapp/WEB-INF/web.xml
+++ b/CommunityExample/src/main/webapp/WEB-INF/web.xml
@@ -53,7 +53,18 @@
 	    <filter-name>encodingFilter</filter-name> 
 	    <url-pattern>/*</url-pattern> 
  	</filter-mapping> 
- 	
- 	<!-- lucy filter -->
- 
+
+	<!-- request put, delete -->
+	<filter>
+		<filter-name>httpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter
+		</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>httpMethodFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- lucy filter -->
+
 </web-app>
